--- a/trunk/bugzilla/2.18.3/tr/default/bug/edit.html.tmpl
+++ b/trunk/bugzilla/2.18.3/tr/default/bug/edit.html.tmpl
@@ -112,10 +112,34 @@
 
 [% END %]
 
+    // LIMIT COMMENT LENGTH
+    MAX_LINES = 50;
+
+    function count(s1, s2) {
+        var c = 0;
+        for (var i = 0; i < s1.length; i++) {
+            if (s2 == s1.substr(i, s2.length)) {
+                c++;
+            }
+        }
+        return c;
+    }
+    
+    function checkCommentLength() {
+        var el = document.getElementById('comment');
+        if (count(el.value, '\n') > MAX_LINES) {
+            var msg = MAX_LINES + ' satırdan uzun yorum yazamazsınız.\nKomut çıktılarını eklenti olarak gönderin.';
+            alert(msg);
+            return false;
+        }
+        return true;
+    }
+    // LIMIT COMMENT LENGTH
+
   //-->
   </script>
 
-<form name="changeform" method="post" action="process_bug.cgi">
+<form name="changeform" method="post" action="process_bug.cgi" onsubmit="return checkCommentLength();">
 
   <input type="hidden" name="delta_ts" value="[% bug.delta_ts %]">
   <input type="hidden" name="longdesclength" value="[% bug.longdescs.size %]">
@@ -458,42 +482,8 @@
   <br>
   <a name="add_comment"></a>
 
-  <!-- LIMIT COMMENT LENGTH -->
-  <script type="text/javascript">
-    MAX_LINES = 20;
 
-    function count(s1, s2) {
-        var c = 0;
-        for (var i = 0; i < s1.length; i++) {
-            if (s2 == s1.substr(i, s2.length)) {
-                c++;
-            }
-        }
-        return c;
-    }
-
-    value_last = '';
-
-    function valueInit(el) {
-        value_last = el.value;
-    }
-
-    function valueChanged(el) {
-        var c = count(el.value, '\n');
-        if (c > MAX_LINES) {
-            el.value = value_last;
-            var msg = MAX_LINES + ' satırdan uzun yorum yazamazsınız.\nÇıktıları eklenti olarak gönderin.';
-            alert(msg);
-        }
-        else {
-            value_last = el.value;
-        }
-    }
-  </script>
-  <!-- LIMIT COMMENT LENGTH -->
-
-  <textarea onkeyup="valueChanged(this);" onfocus="valueInit(this);"
-            wrap="hard" name="comment" id="comment" rows="10" cols="80"
+  <textarea wrap="hard" name="comment" id="comment" rows="10" cols="80"
             accesskey="y"></textarea>
   <br>
 
